duplicate/jumping message issue fix in history

--- a/src/components/chatwindow/sass/chatWindow.scss
+++ b/src/components/chatwindow/sass/chatWindow.scss
@@ -323,6 +323,9 @@
 			.messageBubble{
 				animation:none;
 			}
+			.messageLeftAnimation {
+				animation: none;
+			}
 		}
 		.paginted-history-loader{
 			display: flex;
