--- a/src/templatemanager/templates/button/buttonTemplate.scss
+++ b/src/templatemanager/templates/button/buttonTemplate.scss
@@ -4,9 +4,6 @@
     border-radius: 12px;
     padding: 0;
     font-size: 14px;
-    -webkit-animation: message-left ease-in-out 2s forwards;
-    -moz-animation: message-left ease-in-out 2s forwards;
-    animation: message-left ease-in-out 2s forwards;
     margin: 0;
     border: 1px solid var(--sdk-chat-widow-primary-bg-color);
     max-width: 95%;
@@ -16,6 +13,12 @@
         display: inline-block;
         word-break: break-word;
     }
+}
+
+.kore-chat-window .buttonTmplContent .buttonTmplContentBox .messageLeftAnimation {
+    -webkit-animation: message-left ease-in-out 2s forwards;
+    -moz-animation: message-left ease-in-out 2s forwards;
+    animation: message-left ease-in-out 2s forwards;
 }
 
 .kore-chat-window .buttonTmplContent .buttonTmplContentHeading {
