--- a/src/templatemanager/templates/checkBoxesTemplate/checkBoxesTemplate.scss
+++ b/src/templatemanager/templates/checkBoxesTemplate/checkBoxesTemplate.scss
@@ -26,13 +26,15 @@
     border-radius: 12px;
     padding: 0;
     font-size: 14px;
-    -webkit-animation: message-left ease-in-out 2s forwards;
-    -moz-animation: message-left ease-in-out 2s forwards;
-    animation: message-left ease-in-out 2s forwards;
     margin: 0;
     border: 1px solid var(--sdk-chat-widow-primary-bg-color);
     max-width: 95%;
     line-height: 1.5;
+}
+.kore-chat-window .checkboxes-template .checkBoxestmplContentBox .messageLeftAnimation {
+    -webkit-animation: message-left ease-in-out 2s forwards;
+    -moz-animation: message-left ease-in-out 2s forwards;
+    animation: message-left ease-in-out 2s forwards;
 }
 .kore-chat-window .checkBoxestmplContentBox li:first-child {
     margin-top: 0;
