--- a/src/templatemanager/templates/listViewTemplate/listViewTemplate.scss
+++ b/src/templatemanager/templates/listViewTemplate/listViewTemplate.scss
@@ -21,11 +21,13 @@
 	border-radius: 12px;
     padding: 0;
 	font-size: 14px;
-	-webkit-animation: message-left ease-in-out 2s forwards;
-    -moz-animation: message-left ease-in-out 2s forwards;
-    animation: message-left ease-in-out 2s forwards;
 	margin: 0;
 	width:100%;
+}
+.kore-chat-window .kore-chat-body .listViewTmplContent .listViewTmplContentBox .messageLeftAnimation {
+    -webkit-animation: message-left ease-in-out 2s forwards;
+    -moz-animation: message-left ease-in-out 2s forwards;
+    animation: message-left ease-in-out 2s forwards;
 }
 .kore-chat-window .kore-chat-body .listViewTmplContent .listViewLeftContent{
     vertical-align: middle;
